cleaned up menu settings, added test paterns, added menubar icon option

--- a/_includes/banner-area.html
+++ b/_includes/banner-area.html
@@ -23,6 +23,7 @@ The spacer-for-fixed-banner is then used to ensure that the column panel does no
 	<div class="banner"></div>
 	<div class="menubar-top-separator"></div>
 	<div class="menubar">
+		{% include menubar-icon.html %}
 		<div class="item">
 			<div class="title">
 				<a href=""><p>Home</p></a>
