--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -1,4 +1,7 @@
 <nav class="menubar">
+
+	<!-- include the menu icon -->
+	{% include menubar-icon.html %}
 	
 	<!-- Create a list of top menu item titles -->
 	{% assign topTitles = "" | split: "" %}
