--- a/_sass/classic/_banner-area.scss
+++ b/_sass/classic/_banner-area.scss
@@ -105,7 +105,7 @@
 		@include wide-layout   { z-index: $banner-icon-z-index-wide; }
 
 			
-		.icon {				
+		.banner-icon {				
 
 			@include narrow-layout {
 
