--- a/_includes/banner-icon.html
+++ b/_includes/banner-icon.html
@@ -1,14 +1,14 @@
 {% comment %}<!--
 
-This file is for customization of the menubar icon.
+This file is for customization of the banner icon.
 
 Do not change the name of the class of this div!
 
 If no icon is needed, don't put anything in here, but keep the file.
 
-Note that a simple menubar icon can also be assigned through the settings in the classic-jekyll-theme.scss file.
+Note that a simple banner icon can also be assigned through the settings in the classic-jekyll-theme.scss file.
 
-The content here will drive the height of the menubar if the '$menubar-height-...' is set to 'auto'.
+Be aware that this banner-icon is arranged outside the DOM and as such does not drive the size of the the banner.
 
 To display/not-display and elements use the '.display-flex-...' classes en '.display-block-...' classes. (See _sass/_theme-library.scss for more.
 
@@ -17,5 +17,5 @@ Example: <div class='myclass display-block-narrow'><p>Hello</p></div>
 Will display the text "Hello" only when the narrow layout is in use.
 
 -->{% endcomment %}
-<div class="menubar-icon">
+<div class="banner-icon">
 </div>
