--- a/_sass/classic/_banner-area.scss
+++ b/_sass/classic/_banner-area.scss
@@ -566,7 +566,7 @@
 }
 
 // Added to the banner-area that is used as a placeholder to keep the column-panel from appearing below the
-// banner-area. It does not seem to be necessary though.
+// banner-area. It does not seem to be necessary though. Still,it could prevent future problems, hence 
 //
 .invisible {
 	opacity: 0;
