--- a/_sass/classic-jekyll-theme.scss
+++ b/_sass/classic-jekyll-theme.scss
@@ -67,25 +67,21 @@ $body-panel-background-narrow:			none;
 // The banner area encompasses the banner ( banner-icon, banner-title, banner-subtitle, banner-menu-symbol ),
 // menubar-top-separator, menubar, menubar-bottom-separator.
 
-// The overall height for the banner class is calculated from the other heights in this section. Thus all
-// heights must use the same units. I.e. everything in em or pixel etc.
+// When the banner area is customized the height of the banner-area as determined by the DOM may be wrong.
+// For the "top-fixed" banner position (see setup.yml) this may result in content that shows up behind (or is hidden
+// by) the elements of the banner-area, most likely the menubar.
+// To compensate for this, assign a value to this height.
 //
-// If the overall height can be calculated, then set the banner-menubar-overall-height-... to negative. If the overall
-// height cannot be calculated, then set the necessary value for the banner-menubar-overall-height-...
+// Written to a css 'height' property.
 //
-$banner-area-height-narrow:		-1;	// < 0 means: calculate from other (enabled) heights
-$banner-area-height-medium:		-1;	// < 0 means: calculate from other (enabled) heights
-$banner-area-height-wide:		-1;	// < 0 means: calculate from other (enabled) heights
-
+$add-to-banner-area-height-narrow:		0px;
+$add-to-banner-area-height-medium:		0px;
+$add-to-banner-area-height-wide:		0px;
 
 // *********************************************************************************************************************
 // Banner
 // ---------------------------------------------------------------------------------------------------------------------
-// The banner is a complex element as it is part real and part virtual. It is real with respect to the background.
-// It is also virtual with respect to the banner-icon, banner-title, banner-subtitle and banner-menu-symbol.
-// Disabling the banner wil also disable all of the components of the banner.
-//
-// The z-index of the banner is fixed at 1
+// Disabling the banner also dsiables the banner-icon, banner-title, banner-subtitle and banner-menu-symbol.
 //
 $banner-enabled-narrow:					true;
 $banner-enabled-medium:					true;
@@ -94,11 +90,6 @@ $banner-enabled-wide:					true;
 // The height of the banner.
 // Note that this is also the height of the elements contained in (above!) it.
 // Written to a CSS 'height' property.
-//
-// When this height is not specified, the banner-area-height must be specified.
-//
-// When this height is specified it must use the same units as the menubar-top-separator-height, menubar-height and
-// menubar-bottom-separator-height.
 //
 $banner-height-narrow:					48px;
 $banner-height-medium:					68px;
@@ -110,6 +101,7 @@ $banner-height-wide:					135px;
 $banner-background-narrow:				white;
 $banner-background-medium:				white;
 $banner-background-wide:				white;
+
 
 // *********************************************************************************************************************
 // Banner Icon
